[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core", "rtree>=1.2"]

[project]
name = "libsupermesh"
# <year.month.patch>
version = "2025.3.0"
description = "A parallel supermeshing library"
readme = "README.md"
authors = [
  {name = "James R. Maddison", email = "j.r.maddison@ed.ac.uk"},
  {name = "Iakovos Panourgias"},
  {name = "Patrick E. Farrell"},
  {name = "Matteo Croci"},
  {name = "Jack Betteridge", email = "J.Betteridge@imperial.ac.uk"},
]
dependencies = [
  "rtree>=1.2",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Programming Language :: Python",
  "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/firedrakeproject/libsupermesh"

[tool.scikit-build]
wheel.install-dir = "libsupermesh"
